[package]
name = "wio-sauna-monitor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wio_terminal = { git = "https://github.com/n-miyamoto/atsamd", branch = "dev-i2c" }
panic-halt = "~0.2"
cortex-m = "~0.6"
cortex-m-rt = "~0.6"
heapless = "~0.5"
embedded-graphics = "~0.6"
